--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -38,5 +38,6 @@
 \input{5TE}
 \input{6FCM}
 \input{7SLM}
+\input{8IBE}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\end{document}
+\end{document} 
