--- a/Report/2FD.tex
+++ b/Report/2FD.tex
@@ -3,7 +3,7 @@ There are several different variants of the  finite difference methods (FDMs), t
 %----------------------------------------------------------------------
 \begin{figure}[H] 
  \centering
- \includegraphics[width=\textwidth]{Images/Error.jpg}
+ \includegraphics[width=0.5\textwidth]{Images/Error.jpg}
  \caption{Comparison of Errors in FDM variants in log plot}
  \label{fig:errorgraph}
 \end{figure}
