--- a/Report/7SLM.tex
+++ b/Report/7SLM.tex
@@ -47,3 +47,8 @@ The MC Mod method uses the minmod of all three gradient measures to determine th
 \end{equation*}
 \subsection{Analysis}
 By using these three methods on the same function as Figure \ref{fig:lw_lf_ue}, we can see in Figure \ref{fig:mm_sb_mc} that these methods provide a high accuracy for both the Gaussian and the heaviside step functions and have a steeper step than that of the Upwind Euler.
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{Images/7_mm_sb_mc.jpg}
+  \caption{Comparison of Minmod, Superbee and MC Mod methods}\label{fig:mm_sb_mc}
+\end{figure}
